Using collections factory methods available in Java 9+ (List.of(), etc.).
Signed-off-by: Simone Bordet <simone.bordet@gmail.com>