@@ -22,12 +22,9 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.nio.file.StandardOpenOption;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
-
 import javax.inject.Inject;
-
 import org.cometd.annotation.Listener;
 import org.cometd.annotation.Param;
 import org.cometd.annotation.Service;
@@ -264,7 +261,7 @@ public class ServerServiceDocs {
     // end::annotatedServiceBinary[]
 
     private static List<String> retrieveContactsFromDatabase(String userId) {
-        return Collections.emptyList();
+        return List.of();
     }
 
     @SuppressWarnings("InnerClassMayBeStatic")
