@@ -15,7 +15,6 @@
  */
 package org.cometd.oort;
 
-import java.util.Collections;
 import java.util.EventListener;
 import java.util.HashMap;
 import java.util.List;
@@ -418,7 +417,7 @@ public abstract class OortMap<K, V> extends OortContainer<ConcurrentMap<K, V>> {
 
         @Override
         public void onUpdated(Info<ConcurrentMap<K, V>> oldInfo, Info<ConcurrentMap<K, V>> newInfo) {
-            Map<K, V> oldMap = oldInfo == null ? Collections.emptyMap() : oldInfo.getObject();
+            Map<K, V> oldMap = oldInfo == null ? Map.of() : oldInfo.getObject();
             Map<K, V> newMap = new HashMap<>(newInfo.getObject());
             for (Map.Entry<K, V> oldEntry : oldMap.entrySet()) {
                 K key = oldEntry.getKey();
