@@ -15,7 +15,7 @@
  */
 package org.cometd.server.filter;
 
-import java.util.Collections;
+import java.util.Map;
 import org.cometd.bayeux.Promise;
 import org.cometd.bayeux.server.ServerChannel;
 import org.cometd.bayeux.server.ServerMessage;
@@ -40,7 +40,7 @@ public class JSONDataFilterTest extends AbstractBayeuxClientServerTest {
         bayeux.createChannelIfAbsent(unfiltered).getReference().addListener(new ServerChannel.MessageListener() {
             @Override
             public boolean onMessage(ServerSession session, ServerChannel channel, ServerMessage.Mutable message) {
-                bayeux.getChannel(filtered).publish(session, Collections.unmodifiableMap(message.getDataAsMap()), Promise.noop());
+                bayeux.getChannel(filtered).publish(session, Map.copyOf(message.getDataAsMap()), Promise.noop());
                 return true;
             }
         });
